<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/colorWhite"
    tools:context="com.brokeneye.a_001.Login.LoginActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:foregroundGravity="center"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp">

                <ImageView
                    android:id="@+id/logo"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_centerHorizontal="true"
                    app:srcCompat="@drawable/logo512"
                    />


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/app_name"
                    android:textSize="10dp"
                    android:layout_below="@id/logo"
                    android:layout_alignRight="@id/logo"
                    android:layout_alignEnd="@id/logo"
                    />

            </RelativeLayout>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/UserID"
                android:textColor="@color/colorBlack"
                android:textSize="15dp"
                android:layout_marginBottom="10dp"/>

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/idText_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/UserID"
                android:textColorHint="@color/colorGrey"
                android:maxLines="1"
                android:textSize="20dp"
                android:background="@color/colorSubWhite"
                android:inputType="textEmailAddress"
                android:paddingLeft="10dp"
                />

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/passwordText_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:hint="@string/Password"
                android:textColorHint="@color/colorGrey"
                android:background="@color/colorSubWhite"
                android:textSize="20dp"
                android:layout_marginTop="10dp"
                android:paddingLeft="10dp"
                />



            <Button
                android:id="@+id/loginButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_gravity="center"
                android:text="@string/Login"
                android:textColor="@color/colorWhite"
                android:background="@color/colorMain"
                android:onClick="Login"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txt_forgot"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:textColor="@color/colorBlack"
                android:paddingBottom="15dp"
                android:clickable="true"
                android:layout_marginTop="2dp"
                android:paddingLeft="2dp"
                android:paddingTop="15dp"
                android:text="@string/Forgot"/>

            <TextView
                android:id="@+id/registerButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/colorBlack"
                android:layout_marginTop="2dp"
                android:gravity="center"
                android:paddingBottom="15dp"
                android:paddingRight="2dp"
                android:paddingTop="15dp"
                android:text="@string/Register"
                android:clickable="true"/>

        </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="16dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_gravity="center"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="1dp"
                    android:background="@color/colorMain" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:text="or"
                    android:textColor="@color/colorMain"
                    android:textSize="15dp"/>

                <TextView
                    android:layout_gravity="center"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="1dp"
                    android:background="@color/colorMain" />


            </LinearLayout>




        </LinearLayout>

    </ScrollView>


</RelativeLayout>
